edit:main.css edit

--- a/mimidaily/src/main/webapp/css/main.css
+++ b/mimidaily/src/main/webapp/css/main.css
@@ -17,8 +17,28 @@
 }
 /* font */
 @font-face {
+  font-family: "NotoSansKR-Light";
+  src: url("../font/NotoSansKR-Light.woff");
+}
+@font-face {
+  font-family: "NotoSansKR-Regular";
+  src: url("../font/NotoSansKR-Regular.woff");
+}
+@font-face {
   font-family: "NotoSansKR-Medium";
   src: url("../font/NotoSansKR-Medium.woff");
+}
+@font-face {
+  font-family: "NotoSansKR-SemiBold";
+  src: url("../font/NotoSansKR-SemiBold.woff");
+}
+@font-face {
+  font-family: "NotoSansKR-Bold";
+  src: url("../font/NotoSansKR-Bold.woff");
+}
+@font-face {
+  font-family: "NotoSansKR-ExtraBold";
+  src: url("../font/NotoSansKR-ExtraBold.woff");
 }
 
 /* reset */
@@ -27,6 +47,9 @@
   padding:0;
   box-sizing: border-box;
   color: var(--mimiDark);
+  font-size: 16px;
+  font-family: "NotoSansKR-Regular";
+
 }
 html, body{height: 100%;width: 100vw;position: relative;background-color: var(--mimiBg);}
 a{text-decoration: none;color: inherit;}
@@ -34,3 +57,7 @@ ul, li{list-style: none;}
 /* 중요내용 작성 > 하지만 display 노출에서 감추고 싶을 때 사용 (dom에서 완전히 감추는 display:none과 다름) */
 .hide{font-weight: 0;width: 0;height: 0;overflow: hidden;position: absolute;z-index: -999;}
 
+.cont{width: 768px; display: flex;}
+
+.title1 {font-size: 40px;}
+.title2 {font-size: 24px;}
