--- a/mimidaily/src/main/webapp/css/login.css
+++ b/mimidaily/src/main/webapp/css/login.css
@@ -15,7 +15,7 @@
     width: 250px;
     height: 60px;
     margin-bottom: 5px;
-    background: url(../img/logo.svg);
+    background: url(../media/images/logo.svg);
 }
 
 h2 {
