--- a/mimidaily/src/main/webapp/css/login.css
+++ b/mimidaily/src/main/webapp/css/login.css
@@ -1,27 +1,27 @@
 #wrap {
     width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
 }
 
 #login .cont {
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 30px 0;
 }
 
 #logo {
     width: 250px;
     height: 60px;
-    margin-bottom: 5px;
     background: url(../media/images/logo.svg);
 }
 
 h2 {
     font-size: 40px;
     font-family: "NotoSansKR-Light";
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 form {
@@ -86,7 +86,7 @@ align-items: center;
 
 .join_btn {
     width: 100%;
-    margin: 5px 0px 95px 0px;
+    margin: 5px 0px 70px 0px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -109,7 +109,7 @@ align-items: center;
 .login_btn {
     width: 336px;
     height: 78px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     background: var(--mimiDark);
 }
 
