--- a/mimidaily/src/main/webapp/css/index.css
+++ b/mimidaily/src/main/webapp/css/index.css
@@ -16,5 +16,9 @@
 aside {width: 320px;}
 aside .login_box {width: 100%; margin-bottom: 2rem;display: flex;flex-direction: column;align-items: center;padding: 1rem;}
 aside .login_box p{margin: 0; font-size: 14px;}
-aside .login_box .login{color: var(--mimiContainer); font-size: 24px; background-color: var(--mimiLight); border-radius: 4px;    width: 190px;text-align: center;padding: 0.3rem;margin: 0.5rem auto;}
+aside .login_box .login{color: var(--mimiContainer); font-size: 24px; background-color: var(--mimiLight); border-radius: 4px;width: 190px;text-align: center;padding: 0.3rem;margin: 0.5rem auto;}
+aside .logining {display: flex; align-items: center; justify-content: space-around; margin: 0.5rem auto;width: 90%;}
+aside .btn{border-radius: 4px;text-align: center;margin: 0.5rem auto;padding: 0.5rem 1rem;}
+aside .login_box .write{color: var(--mimiContainer); font-size: 18px; background-color: var(--mimiLight);}
+aside .login_box .logout{color: var(--mimiContainer); font-size: 18px; background-color: var(--mimiDark);}
 aside .login_box .register{font-weight: 500;}
