--- a/mimidaily/src/main/webapp/css/join.css
+++ b/mimidaily/src/main/webapp/css/join.css
@@ -56,6 +56,7 @@ input:focus {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin-bottom: 20px;
   padding: 15px;
 }
