--- a/mimidaily/src/main/webapp/css/musteat.css
+++ b/mimidaily/src/main/webapp/css/musteat.css
@@ -1,7 +1,64 @@
-.nvba {
-    width: 100%;
-    height: 320px;
+#wrap {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    align-items: center; 
 }
+#musteat .top_title {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+}
+#musteat .top_title span{
+    font-size: 36px;
+    font-family: 'NotoSansKR-bold';
+    margin-bottom: 10px;
+    text-indent: 10px;
+}
+#musteat .top_title .under_line{
+    width: 100%;
+    border-bottom: 2px solid var(--mimiDark);
+}
+#musteat .cont {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 80%;
+}
+#musteat .news_list {
+    width: 75%;
+}
+#musteat .news_list .news {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 10px;
+    padding: 5px;
+    cursor: pointer;
+}
+#musteat .news_list .news_info {
+    width: 80%;
+}
+#musteat .news_list .news_title {
+    font-size: 24px;
+    font-family: 'NotoSansKR-Bold';
+}
+#musteat .news_list .news_text {
+    font-size: 20px;
+}
+#musteat .news_list .news_date {
+    font-family: 'NotoSansKR-Light';
+    display: inline;
+}
+#musteat .news_list .news_writer {
+    font-family: 'NotoSansKR-Light';
+    display: inline;
+    margin-left: 10px;
+}
+#musteat .news_list .news_thumnails {
+    width: 20%;
+}
+#musteat .right_cont {
+    width: 25%;
+}
+#musteat .page_nav {}
