--- a/mimidaily/src/main/webapp/css/musteat.css
+++ b/mimidaily/src/main/webapp/css/musteat.css
@@ -40,6 +40,7 @@
     margin-bottom: 10px;
     padding: 5px;
     cursor: pointer;
+    height: 150px;
 }
 #musteat .news_list .news_info {
     width: 80%;
