edit: musteat 기사 리스트 썸네일 불러오기 완료, add:썸네일 업로드 폴더 추가

--- a/mimidaily/src/main/webapp/css/musteat.css
+++ b/mimidaily/src/main/webapp/css/musteat.css
@@ -29,6 +29,7 @@
     flex-direction: row;
     justify-content: center;
     width: 70%;
+    padding: 10px 0px;
 }
 #musteat .news_list {
     width: 75%;
@@ -90,4 +91,6 @@
 
 
 
-#musteat .page_nav {}
+#musteat .page_nav {
+    padding: 20px;
+}
