--- a/mimidaily/src/main/webapp/css/member.css
+++ b/mimidaily/src/main/webapp/css/member.css
@@ -10,13 +10,13 @@
   align-items: center;
   flex-direction: column;
 }
-#member .cont {
+/* #member .cont {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 30px 0;
-}
+} */
 #logo {
   width: 250px;
   height: 60px;
