--- a/mimidaily/src/main/webapp/css/login.css
+++ b/mimidaily/src/main/webapp/css/login.css
@@ -4,7 +4,7 @@
     justify-content: center;
 }
 
-#login .cont {
+#login .content {
     display: flex;
     flex-direction: column;
     align-items: center;
