--- a/mimidaily/src/main/webapp/css/travel.css
+++ b/mimidaily/src/main/webapp/css/travel.css
@@ -20,12 +20,12 @@
   margin: 0 auto 5rem auto;
   justify-content: start;
 }
-section.news_list{width: 70%; min-width: 520px;padding: 0 1rem 1.5rem 1rem;}
+section.news_list{width: 70%; min-width: 520px;padding: 0 1rem 0 1rem;}
 .news_cont{display: flex;justify-content: space-around;align-items: center;margin: 3rem auto;}
 .news_cont .news_img{width: 200px;height: 140px;border-radius: 4px;overflow: hidden;}
 .news_cont img{width: 100%;height: 100%;} 
 .news_cont .contents {width: 240px; display: flex;flex-direction: column;justify-content: space-between;align-items: start;}
-.news_cont .title {font-size: 28px;} 
+.news_cont .title {font-size: 28px;height: 38px;overflow: hidden;text-overflow: ellipsis;white-space:nowrap;width: 240px;} 
 .news_cont .context {
   font-size: 16px; 
   height: 48px;
@@ -37,11 +37,13 @@ section.news_list{width: 70%; min-width: 520px;padding: 0 1rem 1.5rem 1rem;}
   -webkit-line-clamp: 2;
 } 
 .news_cont .date {width: 100%;text-align: end;color: var(--mimiLight);font-size: 14px;} 
-.pagination_bar{display: flex; width: 320px;justify-content: center;margin: auto;align-items: center;}
+.pagination_bar{display: flex; width: 320px;justify-content: center;margin: auto;align-items: center;padding-bottom:1.5rem}
 .pagination_bar .current_page{font-weight: bold; margin: 0 16px;}
 .pagination_bar a{color: var(--mimiLight); margin: 0 16px;}
 .pagination_bar i {color: var(--mimiDark);}
+a.paging_btn{margin: 0 4px;}
 
+/* aside */
 aside.news_right{
   position: fixed; /* 부모 속성 */
   width: 220px;
@@ -50,27 +52,41 @@ aside.news_right{
   height: 1300px;
   transition: all 0.2s;
   opacity: 0;
+  z-index:-1;
 }
-
-aside.news_right.show{
-  opacity: 1;
-  z-index: 1;
-  top: 160px;
-}
-
-.userbox, .most_viewed_news{
-  top: 0;
-  position: sticky;
-  position: -webkit-sticky;
-}
-
+aside.news_right.show{opacity: 1;z-index: 1;top: 116px;}
+.userbox, .most_viewed_news{top: 0;position: sticky;position: -webkit-sticky;}
 .news_top{display: none;}
+.most_viewed_news h3{font-size: 20px;font-weight: bold;margin-bottom: 1rem;}
+.most_viewed_news .news_list .news_img{width: 80px;margin-right: 0.5rem;}
+.most_viewed_news .news_list img{width: 100%;}
+.most_viewed_news .news_list li{display: flex;align-items: center;margin-bottom: 1rem; width: 100%;}
+.most_viewed_news .news_list h4{white-space: nowrap;overflow: hidden;text-overflow: ellipsis;font-weight: 600;width: 100px;}
+.most_viewed_news .news_list .content{white-space: nowrap;overflow: hidden;text-overflow: ellipsis;font-size: 14px;width: 100px;}
+.most_viewed_news .news_list .date{color: #8C7B7B;font-size: 12px;text-align: end;}
 
 @media (min-width: 911px) and (max-width: 1120px) {
   aside.news_right{right: 8%;}
 }
+@media (min-width: 780px)  and (max-width: 910px) {
+  .news_container{justify-content: center; width: 768px; min-width: 320px;}
+  section.news_list{width: 70%; min-width: 320px;}
+}
+@media (min-width: 0px)  and (max-width: 779px) {
+  .news_container{max-width: 768px; width: 100%;min-width: 320px;}
+  section.news_list{width: 90%; min-width: 320px;margin: auto;}
+}
+
 @media (min-width: 0px)  and (max-width: 910px) {
-  .news_container{justify-content: center;}
   aside.news_right{display: none;}
-  .news_top{display: flex;margin: auto;width: 768px;justify-content: center;}
+  .news_cont .news_img {margin-right: 1rem;}
+  .news_top{display: flex;margin: auto;width: 90%;max-width: 768px;justify-content: center;}
+  .most_viewed_news{height: 253px;overflow: hidden;}
+  .most_viewed_news .news_list li{margin-bottom: 8px;}
+  .most_viewed_news h3{margin-bottom: 15px;}
+}
+
+@media (max-width: 530px) {
+  .news_title{margin: 0 auto 1rem auto;}
+  .most_viewed_news{display: none;}
 }
