--- a/mimidaily/src/main/webapp/css/login.css
+++ b/mimidaily/src/main/webapp/css/login.css
@@ -12,10 +12,9 @@
     padding: 30px 0;
 }
 
-#logo {
+#login_logo {
     width: 250px;
     height: 60px;
-    background: url(../media/images/logo.svg);
 }
 
 h2 {
