edit : 메인페이지에서 기사 작성 가능 / 페이징 수정중

--- a/mimidaily/src/main/webapp/css/musteat.css
+++ b/mimidaily/src/main/webapp/css/musteat.css
@@ -107,4 +107,18 @@
 
 #musteat .page_nav {
     padding: 20px;
+    width: 10%;
+}
+#musteat .page_nav ul{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+#musteat .page_nav ul li{}
+#musteat .page_nav ul li.current{}
+#musteat .page_nav ul li a{}
+#musteat .page_nav ul li a.disabled{
+    opacity: 0.3;
+    pointer-events: none;
 }
