add: newest.jsp

--- a/mimidaily/src/main/webapp/css/travel.css
+++ b/mimidaily/src/main/webapp/css/travel.css
@@ -21,11 +21,11 @@
   justify-content: start;
 }
 section.news_list{width: 70%; min-width: 520px;padding: 0 1rem 0 1rem;}
-.news_cont{display: flex;justify-content: space-around;align-items: center;margin: 3rem auto;}
+.news_cont{display: flex;justify-content: space-around;align-items: center;margin: 4rem auto 3rem auto;font-size: 20px;position: relative;color: #8C7B7Bgit;}
 .news_cont .news_img{width: 200px;height: 140px;border-radius: 4px;overflow: hidden;}
 .news_cont img{width: 100%;height: 100%;} 
-.news_cont .contents {width: 240px; display: flex;flex-direction: column;justify-content: space-between;align-items: start;}
-.news_cont .title {font-size: 28px;height: 38px;overflow: hidden;text-overflow: ellipsis;white-space:nowrap;width: 240px;} 
+.news_cont .contents {width: 60%; display: flex;flex-direction: column;justify-content: space-between;align-items: start;}
+.news_cont .title {font-size: 28px;height: 38px;overflow: hidden;text-overflow: ellipsis;white-space:nowrap;width: 100%;} 
 .news_cont .context {
   font-size: 16px; 
   height: 48px;
@@ -36,13 +36,14 @@ section.news_list{width: 70%; min-width: 520px;padding: 0 1rem 0 1rem;}
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
 } 
+.news_cont .category{font-size: 14px;color: var(--mimiLight);margin-bottom: 0.5rem;border-radius: 30px; color: #F0ECEC;}
 .news_cont .date {width: 100%;text-align: end;color: var(--mimiLight);font-size: 14px;} 
 .pagination_bar{display: flex; width: 320px;justify-content: center;margin: auto;align-items: center;padding-bottom:1.5rem}
 .pagination_bar .current_page{font-weight: bold; margin: 0 16px;}
 .pagination_bar a{color: var(--mimiLight); margin: 0 16px;}
 .pagination_bar i {color: var(--mimiDark);}
 a.paging_btn{margin: 0 4px;}
-
+ 
 /* aside */
 aside.news_right{
   position: fixed; /* 부모 속성 */
@@ -58,12 +59,18 @@ aside.news_right.show{opacity: 1;z-index: 1;top: 116px;}
 .userbox, .most_viewed_news{top: 0;position: sticky;position: -webkit-sticky;}
 .news_top{display: none;}
 .most_viewed_news h3{font-size: 20px;font-weight: bold;margin-bottom: 1rem;}
+.news_cont .news_img {margin-right: 1rem;}
 .most_viewed_news .news_list .news_img{width: 80px;margin-right: 0.5rem;}
 .most_viewed_news .news_list img{width: 100%;}
 .most_viewed_news .news_list li{display: flex;align-items: center;margin-bottom: 1rem; width: 100%;}
 .most_viewed_news .news_list h4{white-space: nowrap;overflow: hidden;text-overflow: ellipsis;font-weight: 600;width: 100px;}
 .most_viewed_news .news_list .content{white-space: nowrap;overflow: hidden;text-overflow: ellipsis;font-size: 14px;width: 100px;}
 .most_viewed_news .news_list .date{color: #8C7B7B;font-size: 12px;text-align: end;}
+
+.empty_article{position: relative;}
+.empty_article .userbox{position: absolute; top: 50%;transform: translateY(-50%);right: -300px;}
+.userbox_cont .userbox{position: absolute; top: 50%;transform: translateY(-50%);right: -300px;}
+
 
 @media (min-width: 911px) and (max-width: 1120px) {
   aside.news_right{right: 8%;}
@@ -79,11 +86,13 @@ aside.news_right.show{opacity: 1;z-index: 1;top: 116px;}
 
 @media (min-width: 0px)  and (max-width: 910px) {
   aside.news_right{display: none;}
-  .news_cont .news_img {margin-right: 1rem;}
   .news_top{display: flex;margin: auto;width: 90%;max-width: 768px;justify-content: center;}
   .most_viewed_news{height: 253px;overflow: hidden;}
   .most_viewed_news .news_list li{margin-bottom: 8px;}
-  .most_viewed_news h3{margin-bottom: 15px;}
+  .most_viewed_news h3{margin-bottom: 6px;}
+  .most_viewed_news .news_list li:nth-child(3){display: none;}
+  .empty_article .userbox{display: none;}
+  .userbox_cont .userbox{display: none;}
 }
 
 @media (max-width: 530px) {
