--- a/mimidaily/src/main/webapp/css/member.css
+++ b/mimidaily/src/main/webapp/css/member.css
@@ -17,7 +17,7 @@
   align-items: center;
   justify-content: center;
 } */
-#logo {
+#mimilogo {
   width: 250px;
   height: 60px;
   background: url(../media/images/logo.svg);
