--- a/mimidaily/src/main/webapp/css/member.css
+++ b/mimidaily/src/main/webapp/css/member.css
@@ -101,7 +101,7 @@ input[name="gender"] {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     background-color: rgba(0, 0, 0, 0.5); /* 배경을 어둡게 */
 }
 .modal_content {
