--- a/mimidaily/src/main/webapp/css/travel.css
+++ b/mimidaily/src/main/webapp/css/travel.css
@@ -21,7 +21,7 @@
   justify-content: start;
 }
 section.news_list{width: 70%; min-width: 520px;padding: 0 1rem 0 1rem;}
-.news_cont{display: flex;justify-content: space-around;align-items: center;margin: 4rem auto 3rem auto;font-size: 20px;position: relative;color: #8C7B7Bgit;}
+.news_cont{display: flex;justify-content: space-around;align-items: center;margin: 4rem auto 3rem auto;font-size: 20px;position: relative;color: #8C7B7B;}
 .news_cont .news_img{width: 200px;height: 140px;border-radius: 4px;overflow: hidden;}
 .news_cont img{width: 100%;height: 100%;} 
 .news_cont .contents {width: 60%; display: flex;flex-direction: column;justify-content: space-between;align-items: start;}
@@ -36,7 +36,7 @@ section.news_list{width: 70%; min-width: 520px;padding: 0 1rem 0 1rem;}
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
 } 
-.news_cont .category{font-size: 14px;color: var(--mimiLight);margin-bottom: 0.5rem;border-radius: 30px; color: #F0ECEC;}
+.news_cont .category{font-size: 14px;background-color: var(--mimiLight);margin-top: 0.5rem;border-radius: 30px; color: #F0ECEC;padding: 0.2rem 0.5rem;}
 .news_cont .date {width: 100%;text-align: end;color: var(--mimiLight);font-size: 14px;} 
 .pagination_bar{display: flex; width: 320px;justify-content: center;margin: auto;align-items: center;padding-bottom:1.5rem}
 .pagination_bar .current_page{font-weight: bold; margin: 0 16px;}
