--- a/mimidaily/src/main/webapp/css/topten.css
+++ b/mimidaily/src/main/webapp/css/topten.css
@@ -1,7 +1,7 @@
-#news_title {
+#title {
 	font-size: 32px;
 	width: 70%;
-	margin: 2rem auto 3rem auto;
+	margin: 2rem auto;
 	padding-bottom: 1rem;
 	border-bottom: 1px solid var(--mimiLight);
 	font-weight: 700;
@@ -21,12 +21,12 @@
 	width: 33%;
 }
 
-.news_thumnails {
+.news_thumbnails {
     width: 100%;
     height: 60%;
     
 }
-.news_thumnails img{
+.news_thumbnails img{
     width: 100%;
     height: 100%;
 }
