--- a/mimidaily/src/main/webapp/css/articlesList.css
+++ b/mimidaily/src/main/webapp/css/articlesList.css
@@ -22,7 +22,7 @@
 }
 section.news_list{width: 70%; min-width: 520px;padding: 0 1rem 0 1rem;}
 .news_cont{display: flex;justify-content: space-between;align-items: center;margin: 4rem auto 3rem auto;font-size: 20px;position: relative;overflow: hidden;color: #8C7B7B;}
-.news_cont .news_img{width: 200px;height: 140px;border-radius: 4px;overflow: hidden;margin-right:1rem;}
+.news_cont .news_img{width: 200px;height: 140px;border-radius: 4px;overflow: hidden;margin:0 0.6rem;}
 .news_cont img{width: 100%;height: 100%;} 
 .news_cont .contents {padding: 0.5rem;width: 60%;display: flex;flex-direction: column;justify-content: space-between;align-items: start;}
 .news_cont .title {font-size: 28px;height: 38px;overflow: hidden;text-overflow: ellipsis;white-space:nowrap;width: 100%;} 
