--- a/mimidaily/src/main/webapp/css/articlesList.css
+++ b/mimidaily/src/main/webapp/css/articlesList.css
@@ -25,11 +25,11 @@ section.news_list{width: 70%; min-width: 520px;padding: 0 1rem 0 1rem;}
 .news_cont .news_img{width: 200px;height: 140px;border-radius: 4px;overflow: hidden;margin-right:1rem;}
 .news_cont img{width: 100%;height: 100%;} 
 .news_cont .contents {padding: 0.5rem;width: 60%;display: flex;flex-direction: column;justify-content: space-between;align-items: start;}
-.news_cont .title {font-size: 28px;height: 38px;overflow: hidden;text-overflow: ellipsis;white-space:nowrap;width: 80%;margin-bottom: 0.5rem;} 
+.news_cont .title {font-size: 28px;height: 38px;overflow: hidden;text-overflow: ellipsis;white-space:nowrap;width: 100%;margin-bottom: 0.5rem;} 
 .news_cont .context {
   font-size: 16px; 
   height: 48px;
-  margin: 0.5rem 0;
+  margin: 0 0 0.5rem 0;
   overflow: hidden;
   text-overflow: ellipsis;
   width: 100%;
