--- a/mimidaily/src/main/webapp/css/member.css
+++ b/mimidaily/src/main/webapp/css/member.css
@@ -9,15 +9,15 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding: 70px 0;
 }
-#member .cont {
+/* #member .cont {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 30px 0;
-}
-#logo {
+} */
+#mimilogo {
   width: 250px;
   height: 60px;
   background: url(../media/images/logo.svg);
@@ -81,7 +81,6 @@ input[name="gender"] {
 .member_btn {
   width: 336px;
   height: 78px;
-  margin-bottom: 30px;
   background: var(--mimiDark);
 }
 .member_btn input {
@@ -96,25 +95,25 @@ input[name="gender"] {
 /* 모달 스타일 */
 .modal {
     display: none; /* 초기에는 보이지 않게 설정 */
-    position: absolute;
+    position: fixed;
     z-index: 100;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     background-color: rgba(0, 0, 0, 0.5); /* 배경을 어둡게 */
 }
 .modal_content {
     background-color: var(--mimiContainer); /* 모달 내용 배경 */
     margin: 5% auto;
     padding: 20px;
-    position: fix;
+    position: fixed;
     top: 20%;
     left: 15%;
     width: 70%;
     height: 60%;
-    overflow: auto;
+    overflow: hidden;
     z-index: 150; /* 내용은 배경 위에 위치하도록 */
 }
 .close {
