--- a/mimidaily/src/main/webapp/css/view.css
+++ b/mimidaily/src/main/webapp/css/view.css
@@ -1,14 +1,30 @@
 .btn{border-radius: 4px;text-align: center;margin: 0.5rem auto;padding: 0.5rem 1rem;}
 
 .view_container{margin: 3rem auto; padding:1rem;position:relative;width: 70%;min-width: 768px;}
+.view_container .ud_btn{width: 70%;min-width: 520px; text-align:start;margin-bottom: 0.5rem;}
+.view_container .ud_btn .btn:nth-child(1){background-color:#8C7B7B;color: white;}
+.view_container .ud_btn .btn:nth-child(2){background-color:#594543;color: white;}
 .view_box {padding:2rem 1.5rem;width: 70%;min-width: 520px;box-sizing: border-box;}
+.view_top{border-bottom:1px solid rgb(188, 177, 177); margin-bottom:2rem;padding-bottom:1rem;}
 .view_top h2, .view_top h2 span{font-size:24px;}
 .view_top h2 span{color:#8C7B7B;}
-.view_top_info {text-align:end;color:#8C7B7B;}
-.journalist {padding:2rem;margin:1rem auto;border-top:1px solid;border-bottom:1px solid;}
+.view_top_info {text-align:end;margin-top:0.5rem;}
+.view_top_info * {color:#8C7B7B;font-size:14px;}
+.view_top_info span{margin:0.5rem;}
+
+.view_bottom .news_img {margin-top: 1rem;}
+.view_bottom .news_img img{width:100%;}
+.view_bottom .news_context{margin:2rem 1rem;}
+.journalist {display:flex;padding:2rem;margin:1rem auto;border-top:1px solid rgb(188, 177, 177);border-bottom:1px solid rgb(188, 177, 177);align-items:center;}
+.view_bottom i.none_profile {font-size: 44px;color:#8C7B7B;}
+.view_bottom .profile_img {width:44px;height:44px;}
+.view_bottom .profile_img img {width:100%;height:100%;}
+.journalist_info{margin-left:1rem;}
+.journalist_info .writer_mail *{color:#8C7B7B;}
+.journalist_info .writer_mail:hover{border-bottom:1px solid;}
 
 /* aside */
-aside.news_right{
+.view_container aside.news_right{
   position: absolute; /* 부모 속성 */
   width: 220px;
   top: -130px;
@@ -16,9 +32,15 @@ aside.news_right{
   transition: all 0.2s;
   z-index:1;
 }
-.news_right .aside_box{top: 0;position: sticky;position: -webkit-sticky;transform: translateY(130px);}
+.view_container aside.news_right .aside_box{top: 0;position: sticky;position: -webkit-sticky;transform: translateY(130px);}
+.view_container .most_viewed_news{height: 290px;overflow: hidden;}
+
+.view_container .likes_comments{width:100%;display:flex;justify-content:space-around;padding-left:8px;}
+.view_container .likes_comments .cont{width:80px; height:80px; border-radius:6px;}
 
 @media screen and (max-width: 820px) {
   aside.news_right{display: none;}
-  .view_box {width:90%;margin:auto;}
+  .view_container .ud_bt {width:100%;min-width:320px;}
+  .view_container {width:100%;min-width:320px;}
+  .view_box {width:auto;min-width:320px;}
 }
