--- a/mimidaily/src/main/webapp/css/topten.css
+++ b/mimidaily/src/main/webapp/css/topten.css
@@ -7,26 +7,61 @@
 	font-weight: 700;
 }
 #news_container{
-	width: 70%; 
-	min-width: 768px;
+	width: 70%;
 	margin: 0 auto 5rem auto;
 	display: flex;
 	flex-wrap: wrap;
-	flex-direction: row;
-	justify-content: start;
+	gap: 10px;
+	justify-content: center;
+}
+#news_container .news {
+	background: var(--mimiDark);
+	border-radius: 12px;
+	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+	height: 35vh;
+	padding: 0.5rem;
+	display: flex;
+	flex: 1 1 calc(100% / 3 - 10px);
+	flex-direction: column;
 	overflow: hidden;
+	transition: transform 0.2s;
+	max-width: calc(100% / 3 - 10px);
 }
-#news_container>div {
-	border: 1px solid black;
-	width: 33%;
+#news_container .news:hover {
+  transform: translateY(-5px);
 }
-
-.news_thumbnails {
+#news_container .news_thumbnails {
     width: 100%;
     height: 60%;
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
 }
-.news_thumbnails img{
-    width: 100%;
-    height: 100%;
+#news_container .news_thumbnails img{
+	width: 100%;
+	height: 100%;
+    object-fit: cover;
+  	display: block;
+}
+#news_container .news_title {
+	padding: 12px;
+	height: 40%;
+	font-size: 1rem;
+	font-weight: bold;
+}
+#news_container .news_title * {
+	color: var(--mimiBg);
+}
+#news_container .news_title p {
+	font-size: 6px;
+	width: 100%;
+	height: 25%;
+	overflow: hidden;
+	white-space: nowrap;
+}
+#news_container .news_title article {
+	font-size: 24px;
+	height: 70%;
+	overflow: hidden;
 }
