--- a/mimidaily/src/main/webapp/css/view.css
+++ b/mimidaily/src/main/webapp/css/view.css
@@ -15,6 +15,8 @@
 .view_bottom .news_img {margin-top: 1rem;}
 .view_bottom .news_img img{width:100%;}
 .view_bottom .news_context{margin:2rem 1rem;}
+.view_bottom .hashtags{display:flex;align-items:center;flex-wrap: wrap;}
+.view_bottom .hashtags li{padding:4px 8px;border-radius:30px;background-color:#F0ECEC;margin: auto 8px 1rem 0;}
 .journalist {display:flex;padding:2rem;margin:1rem auto;border-top:1px solid rgb(188, 177, 177);border-bottom:1px solid rgb(188, 177, 177);align-items:center;}
 .view_bottom i.none_profile {font-size: 44px;color:#8C7B7B;}
 .view_bottom .profile_img {width:44px;height:44px;}
