edit: responsive viewDeatil css

--- a/mimidaily/src/main/webapp/css/main.css
+++ b/mimidaily/src/main/webapp/css/main.css
@@ -136,6 +136,9 @@ footer p{text-align: center;color: #8C7B7B; }
   #nav .menu{display: none;}
   #nav .menu_icon{display: inline-block; width: 36px;margin-right: 2rem;}
   #nav .menu_icon i{font-size: 30px;}
+  
+  footer{padding: 1rem;height: auto;}
+  footer p{font-size:14px;}
 }
 @media screen and (max-width: 500px) {
   #nav{height: 100px;}
