--- a/mimidaily/src/main/webapp/css/index.css
+++ b/mimidaily/src/main/webapp/css/index.css
@@ -12,7 +12,7 @@
 #main section.most_liked_news h2{width: 768px;font-size: 40px;font-weight: 600;}
 #main .most_liked_news .news_list{display:flex;flex-direction:column;}
 #main .most_liked_news .news_list li{display:flex;flex-direction:column;}
-#main .most_liked_news .news_img{width:48%;overflow:hidden;}
+#main .most_liked_news .news_img{width:48%;overflow:hidden;border-radius: 8px;}
 #main .most_liked_news img{width:100%;height:100%;}
 #main .most_liked_news .news_list .news_content{width:52%;display: flex;flex-direction: column;padding: 1rem;justify-content: space-between;}
 #main .most_liked_news .news_content h3{font-size: 24px;font-weight: 600;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
@@ -28,7 +28,6 @@
 }
 #main .most_liked_news .news_list .date{color:var(--mimiLight);font-size:14px;text-align:end;}
 
-
 #main .most_liked_news .news_list .fst_news .context{width: 100%;height: 120px;-webkit-line-clamp: 5;}
 #main .most_liked_news .fst_news>div {display:flex;margin: 2rem 0;width: 100%;justify-content: space-between;align-items: center;padding:0 0.5rem;}
 #main .most_liked_news .news_list .fst_news .news_content{height:240px;}
@@ -36,7 +35,7 @@
 #main .most_liked_news .snd_news{display:flex;justify-content: space-between;}
 /* #main .most_liked_news .snd_news>div{display: flex;flex-direction: column;justify-content: center;align-items: center;} */
 #main .most_liked_news .snd_news>div{width:100%}
-#main .most_liked_news .snd_news .news_img{width:90%;padding:0 0.5rem;margin: 0 auto;}
+#main .most_liked_news .snd_news .news_img{width:90%;height: 224px;margin: 0 auto;}
 #main .most_liked_news .news_list .snd_news .news_content{width:100%; align-items: center;}
 #main .most_liked_news .snd_news .news_content h3 {font-size: 20px;width: 90%;}
 #main .most_liked_news .news_list .snd_news .news_content{height:140px;}
