--- a/mimidaily/src/main/webapp/css/login.css
+++ b/mimidaily/src/main/webapp/css/login.css
@@ -136,3 +136,8 @@ input:focus {
     outline: none;
     box-shadow: none;
 }
+
+input:-webkit-autofill {
+    box-shadow: 0 0 0px 1000px #FBF9F9 inset !important;
+    -webkit-text-fill-color: #594543 !important;
+}
