--- a/mimidaily/src/main/webapp/css/topten.css
+++ b/mimidaily/src/main/webapp/css/topten.css
@@ -37,6 +37,19 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    position: relative;
+}
+#news_container .news_thumbnails .news_rank {
+	border-radius: 5rem;
+	background: var(--mimiDark);
+	color: #FFE082;
+	font-size: 24px;
+	font-weight: bold;
+	padding: 1rem;
+	position: absolute;
+	top: -1rem;
+	left: -0.5rem;
+	z-index: 10;
 }
 #news_container .news_thumbnails img{
 	width: 100%;
@@ -56,12 +69,27 @@
 #news_container .news_title p {
 	font-size: 6px;
 	width: 100%;
-	height: 25%;
+	height: 40%;
 	overflow: hidden;
 	white-space: nowrap;
+	display: flex;
+	justify-content: flex-start;
+	align-items:center;
+}
+#news_container .news_title p span {
+	background: var(--mimiBg);
+	color: #A67B5B;
+	margin: 0 0.5rem 0 0;
+	padding: 0.2rem 0.3rem;
+	border-radius: 5rem;
+}
+#news_container .news_title p span.hashtag {
+	background: #FF6F61;
+	color: var(--mimiBg);
+	font-weight: light;
 }
 #news_container .news_title article {
 	font-size: 24px;
-	height: 70%;
+	height: 60%;
 	overflow: hidden;
 }
