--- a/mimidaily/src/main/webapp/css/main.css
+++ b/mimidaily/src/main/webapp/css/main.css
@@ -64,6 +64,7 @@ button{border: none; background-color: transparent; cursor: pointer;}
   border-radius: 2px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
+::selection {background-color:#F0ECEC;color: var(--mimiDark);}
 
 /* navigation */
 #logo{margin: 0 1rem;}
