--- a/mimidaily/src/main/webapp/css/view.css
+++ b/mimidaily/src/main/webapp/css/view.css
@@ -71,13 +71,27 @@
 .view_bottom .news_context{margin:2rem 1rem;}
 .view_bottom .hashtags{display:flex;align-items:center;flex-wrap: wrap;}
 .view_bottom .hashtags li{padding:4px 8px;border-radius:30px;background-color:#F0ECEC;margin: auto 8px 1rem 0;}
-.journalist {display:flex;padding:2rem;margin:1rem auto;border-top:1px solid rgb(188, 177, 177);border-bottom:1px solid rgb(188, 177, 177);align-items:center;}
+.journalist {
+	display:flex;
+	padding:2rem;
+	margin:1rem auto;
+	background-color: #f7f5f5;
+	border-radius: 30px;
+	align-items:center;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+	/* border-top:1px solid rgb(188, 177, 177);
+	border-bottom:1px solid rgb(188, 177, 177); */
+	}
 .view_bottom i.none_profile {font-size: 44px;color:#8C7B7B;}
 .view_bottom .profile_img {width:44px;height:44px;}
 .view_bottom .profile_img img {width:100%;height:100%;}
 .journalist_info{margin-left:1rem;}
 .journalist_info .writer_email *{color:#8C7B7B;}
 .journalist_info .writer_email:hover{border-bottom:1px solid;}
+
+/* 댓글 */
+.comments {}
+.comments h3 {font-size:20px;border-bottom: 1px solid rgb(188, 177, 177);padding:1rem;}
 
 /* aside */
 .view_container aside.news_right{
@@ -89,15 +103,18 @@
   z-index:1;
 }
 .view_container aside.news_right .aside_box{top: 0;position: sticky;transform: translateY(140px);}
+aside.news_right.md .aside_box i.fa-heart{font-size: 30px;}
 .view_container .most_viewed_news{height: 290px;overflow: hidden;}
-
+.view_container .likes_comments .likes span{display:inline-block;width:100%;text-align:center;font-size:14px;margin-bottom: 12px;}
+.view_container .likes_comments .likes p{margin-top:0;position:relative;}
+.view_container .likes_comments .likes .like_txt{font-size: 12px;position:absolute;bottom:-12px;left:50%; width: 40px;transform:translateX(-50%);}
 .view_container .likes_comments{width:100%;display:flex;justify-content:space-around;padding-left:8px;}
 .view_container .likes_comments i{font-size:32px;}
 .view_container .likes_comments .cont{cursor:pointer;width:80px; height:80px; border-radius:6px;display:flex;flex-direction:column;justify-content:center;align-items:center;}
-.view_container .likes_comments .cont p{font-size:14px;margin-top:4px;}
-
+.view_container .likes_comments p{font-size:14px;margin-top:4px;}
 .most_viewed_news .news_list li:nth-child(4){display:none;}
 .comts_likes{display:none;}
+
 @media screen and (max-width: 820px) {
   aside.news_right.md{display: none;}
   .view_container .ud_bt {width:100%;min-width:320px;}
